--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 # Docker Compose for Render deployment
-# Simplified version without complex environment variable interpolation
+# Complete Archon system with all services including agents
 
 services:
   # Server Service (FastAPI + Socket.IO + Crawling)
@@ -19,7 +19,7 @@ services:
       - ARCHON_SERVER_PORT=8181
       - ARCHON_MCP_PORT=8051
       - ARCHON_AGENTS_PORT=8052
-      - AGENTS_ENABLED=false
+      - AGENTS_ENABLED=true
     networks:
       - app-network
     command:
@@ -47,6 +47,37 @@ services:
       retries: 3
       start_period: 40s
 
+  # AI Agents Service (ML/Reranking)
+  archon-agents:
+    build:
+      context: ./python
+      dockerfile: Dockerfile.agents
+    container_name: archon-agents
+    ports:
+      - "8052:8052"
+    environment:
+      - SUPABASE_URL=${SUPABASE_URL}
+      - SUPABASE_SERVICE_KEY=${SUPABASE_SERVICE_KEY}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - SERVICE_DISCOVERY_MODE=docker_compose
+      - LOG_LEVEL=INFO
+      - ARCHON_AGENTS_PORT=8052
+      - ARCHON_SERVER_PORT=8181
+    networks:
+      - app-network
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "sh",
+          "-c",
+          'python -c "import urllib.request; urllib.request.urlopen('"'"'http://localhost:8052/health'"'"')"',
+        ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
   # Lightweight MCP Server Service (HTTP-based)
   archon-mcp:
     build:
@@ -62,7 +93,8 @@ services:
       - TRANSPORT=sse
       - LOG_LEVEL=INFO
       - API_SERVICE_URL=http://archon-server:8181
-      - AGENTS_ENABLED=false
+      - AGENTS_ENABLED=true
+      - AGENTS_SERVICE_URL=http://archon-agents:8052
       - ARCHON_MCP_PORT=8051
       - ARCHON_SERVER_PORT=8181
       - ARCHON_AGENTS_PORT=8052
@@ -70,6 +102,8 @@ services:
       - app-network
     depends_on:
       archon-server:
+        condition: service_healthy
+      archon-agents:
         condition: service_healthy
     healthcheck:
       test:
